force-app/main/default/objects/Lilly_Physician_Association__c/Lilly_Physician_Association__c.object-meta.xml
<CustomObject>
    <label>Physician Association/Society Membership</label>
    <nameField>
        <label>Physician Association Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Physician Association/Society Membership</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>