force-app/main/default/objects/Lilly_Physician_Association__c/fields/Lilly_Account__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Physician Association/Society Membership</relationshipLabel>
    <relationshipName>Physician_Association_Society_Membership</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>