force-app/main/default/objects/Lilly_Physician_Association__c/fields/Lilly_Modified_Role__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Modified_Role__c</fullName>
    <label>Modified Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Officer</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>President</fullName>
            </value>
            <value>
                <fullName>Chair</fullName>
            </value>
            <value>
                <fullName>Board of Directors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>