force-app/main/default/objects/Lilly_Physician_Association__c/fields/Lilly_Sub_Committee_Name__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Sub_Committee_Name__c</fullName>
    <label>Sub-Committee Name</label>
    <type>TextArea</type>
</CustomField>